mcMMO edits compared to default

--- a/src/docs/mcmmo.mdx
+++ b/src/docs/mcmmo.mdx
@@ -31,7 +31,11 @@ Disabled abilities are:
 * Second Smelt (gold Ore)
 * Blast Mining
 * Double Drops (gold & diamond Ore)
+* Shake (Terra Aurora)
 
 :::
 
-
+mcMMO edits applied on EarthMC in comparison with the default settings:
+* Mining gold ores and diamond ores in Terra Aurora give you inverted experience, as gold is rarer (1300 for diamond ore, 2400 for gold ore)
+* There is a chance that gunpowder drops from gravel from level 1000 instead of level 100 in Terra Aurora.
+* Fishing treasures give you 300 or 800 experience instead of 200.
